@@ -169,7 +169,7 @@ int
 gdb_maybe_valid_type_p (SCM value)
 {
   if (SCM_IMP (value) || scm_cellp (value))
-    return scm_tag (value) != SCM_MAKINUM (-1);
+    return (! SCM_EQ_P (scm_tag (value), SCM_MAKINUM (-1)));
   return 0;
 }
 
